# invoice-processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.v2.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  base.py  models.py  session.py
app/db/repositories/: __init__.py  invoice_repository.py
app/queue/: __init__.py  connection.py  tasks.py
app/schemas/: __init__.py  category.py  invoice.py  job.py  stats.py
app/services/: __init__.py  embedder.py  idempotency.py  invoice_categorizer.py  invoice_extractor.py  ksef_parser.py  pdf_text_extractor.py  vector_store.py
docs/dane_testowe/ksef/: faktura_fa2_sample.xml  faktura_fa3_sample.xml
docs/eval/: MOJA_WERSJA_EXPLAINED.md  README_SNIPPET.md  baseline_2026-05-11.json
n8n/: 01_ksef_ingestion.json  99_error_handler.json
scripts/: deploy_cloud_run.sh  eval_categorization.py  generate_eval_fixtures.py  generate_test_pdf.py  migrate_add_category.sql  print_eval_report.py  smoke_test_prod.sh
tests/: conftest.py  test_categorize_endpoint.py  test_db_error_handling.py  test_db_url_normalization.py  test_health.py  test_idempotency.py  test_invoice_extractor.py  test_invoice_repository.py  test_invoices_endpoint.py  test_invoices_jobs_endpoint.py  test_invoices_ksef_endpoint.py  test_invoices_persistence.py  test_invoices_search_endpoint.py  test_invoices_stats_endpoint.py  test_ksef_parser.py  test_pdf_text_extractor.py  test_queue_tasks.py  test_vector_store.py
tests/fixtures/: README.md
tests/fixtures/labeled/: adversarial_erp_consulting_software_11.xml  consulting_business_01.xml  consulting_tax_02.xml  equipment_laptop_01.xml  it_hosting_02.xml  it_saas_01.xml  manifest.json  marketing_ads_01.xml  marketing_agency_02.xml  office_paper_01.xml  office_toner_02.xml  transport_courier_01.xml
